ignored MBC dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 Report*
 .idea*
 wget-log*
+future_image_similarity/data/lab*
+future_image_similarity/data/sim*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
